--- a/samples/XAMLBehaviorsSample/XAMLBehaviorsSample/SetDataValueControl.xaml
+++ b/samples/XAMLBehaviorsSample/XAMLBehaviorsSample/SetDataValueControl.xaml
@@ -54,13 +54,13 @@
                     <TextBlock TextWrapping="Wrap" Margin="10,0,0,0" FontSize="20" Foreground="DarkGray">
                         <TextBlock.Text>SetDataStoreValueAction sets the value of some property in a data store. Type in the text box on the left, and the text block will automatically populate with the same text.</TextBlock.Text>
                     </TextBlock>
-                    <TextBlock TextWrapping="Wrap" Margin="10,20,0,0" FontSize="15" Foreground="DeepPink" xml:space="preserve">&lt;Behaviors:Interaction.Triggers>
-    &lt;Behaviors:EventTrigger EventName="KeyUp">
-        &lt;Behaviors:SetDataStoreValueAction PropertyName="TextBlockText" 
+                    <TextBlock TextWrapping="Wrap" Margin="10,20,0,0" FontSize="15" Foreground="DeepPink" xml:space="preserve"><Behaviors:Interaction.Triggers>
+    <Behaviors:EventTrigger EventName="KeyUp">
+        <Behaviors:SetDataStoreValueAction PropertyName="TextBlockText" 
                     TargetObject="{Binding Mode=OneWay, Source={StaticResource DataStore}}" 
                     Value="{Binding Text, ElementName=MyText}"/>
-        &lt;/Behaviors:EventTrigger>
-&lt;/Behaviors:Interaction.Triggers>
+        </Behaviors:EventTrigger>
+</Behaviors:Interaction.Triggers>
                     </TextBlock>
                 </StackPanel>
             </ScrollViewer>
